# Animation

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: Animation.h  Channel.h  Cloth.h  Cube.h  DOF.h  GeneralParticle.h  Ground.h  Joint.h  KeyFrame.h  Particle.h  ParticleSystem.h  Player.h  Skeleton.h  Skin.h  SpringDamper.h  Triangle.h  Vertex.h  Window.h  core.h  shier.h
src/: Animation.cpp  Channel.cpp  Cloth.cpp  Cube.cpp  DOF.cpp  GeneralParticle.cpp  Ground.cpp  Joint.cpp  KeyFrame.cpp  Particle.cpp  ParticleSystem.cpp  Player.cpp  Shader.cpp  Skeleton.cpp  Skin.cpp  SpringDamper.cpp  Tokenizer.cpp  Vertex.cpp  Window.cpp
